--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     }
   ],
   "require": {
-    "php": ">=7.0"
+    "php": ">=7.0",
+    "nesbot/carbon": "^2.17"
   },
   "autoload": {
     "psr-4": {
