--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,9 @@
     }
   ],
   "require": {
-    "php": ">=7.4",
-    "nesbot/carbon": "^2.17"
+    "php": "^7.4",
+    "ext-iconv": "*",
+    "nesbot/carbon": "^2.33"
   },
   "autoload": {
     "psr-4": {
@@ -20,6 +21,6 @@
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "^7.1"
+    "phpunit/phpunit": "^7.2"
   }
 }
