change sonarqube host

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,4 +2,4 @@ sonar.projectKey=PHP-CSV
 sonar.projectVersion=2.0
 sonar.sources=src
 sonar.tests=tests
-sonar.host.url=http://localhost:9090
+sonar.host.url=http://sonarqube:9090
